--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,12 +3,31 @@ services:
 
   stubmatic:
     build: ./extensions/stubmatic
+    container_name: stubmatic
     networks:
       - weather
     ports:
       - '7777:7777'
     volumes:
       - ./extensions/stubmatic:/usr/src/app
+
+  redis:
+    container_name: redis
+    image: redis:3.2-alpine
+    ports:
+      - "6379:6379"
+    entrypoint: redis-server --appendonly yes
+    restart: always
+
+  redis-commander:
+    container_name: redis-commander
+    hostname: redis-commander
+    image: rediscommander/redis-commander:latest
+    restart: always
+    environment:
+      - REDIS_HOSTS=local:redis:6379
+    ports:
+      - 8081:8081
 
 networks:
   weather:
