--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,13 @@
+spring.profiles.active=@spring.profiles.active@
+
 logging.level.org.mcezario.weather.search=DEBUG
 
-openweathermap.key=[APP-KEY]
-openweathermap.uri=http://api.openweathermap.org/data/2.5/weather?q={city},br&appid={key}&lang=pt&units=metric
+openweathermap.key=12345
+openweathermap.uri=http://localhost:7777/data/2.5/weather?q={city},br&appid={key}&lang=pt&units=metric
 
-advisor.climatempo.key=[APP-KEY]
-advisor.climatempo.cities.uri=http://apiadvisor.climatempo.com.br/api/v1/locale/city?name={city}&token={key}
-advisor.climatempo.city.uri=http://apiadvisor.climatempo.com.br/api/v1/weather/locale/{cityId}/current?token={key}
+advisor.climatempo.key=12345
+advisor.climatempo.cities.uri=http://localhost:7777/api/v1/locale/city?name={city}&token={key}
+advisor.climatempo.city.uri=http://localhost:7777/api/v1/weather/locale/{cityId}/current?token={key}
 
 # Caches. Expiration in minutes
 cache.weather.expiration=30
